# diagnostics

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  stack.xml
bond_core/bond/: CHANGELOG.rst  CMakeLists.txt  package.xml
bond_core/bond_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
bond_core/bondcpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
bond_core/smclibcpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
bond_core/test_bond/: CHANGELOG.rst  CMakeLists.txt  package.xml
bond_core/test_bond_srv_gen/: CMakeLists.txt  package.xml
diagnostic_aggregator/: CHANGELOG.rst  CMakeLists.txt  CPPLINT.cfg  README.md  analyzer_plugins.xml  generic_analyzer_plugin.xml  mainpage.dox  manifest.xml  package.xml  plugin_description.xml  ros2_migration_readme.md
diagnostic_aggregator/demo/: aggregator.launch  demo.launch.py.in  demo.md  demo.pub.py  demo_pub.py  diag-pub.yaml  pr2_analyzers.yaml
diagnostic_aggregator/example/: README.md  example.launch.py.in  example.md  example.yaml  example_add_analyzers.yaml  example_analyzers.yaml  example_pub.py
diagnostic_aggregator/scripts/: add_analyzers  aggregator.py  aggregator_node.py  modify_diagnostics  py_agg_node.py
diagnostic_aggregator/src/: add_analyzer.cpp  aggregator.cpp  aggregator_node.cpp  analyzer_group.cpp  component.cpp  component_analyzer.cpp  diagnostic_aggregator.cpp  diagnostic_item.cpp  discard_analyzer.cpp  downgrade_analyzer.cpp  generic_analyzer.cpp  ignore_analyzer.cpp  plugin_list.cpp  status_item.cpp
diagnostic_aggregator/test/: Readme.txt  add_analyze_pub.cpp  add_analyzers.launch.py.in  add_analyzers.yaml  add_analyzers_init.yaml  add_analyzers_test.py  aggregator_test.py  aggregator_test.py.stashed  aggregator_test_pub.cpp  all_analyzers.yaml  all_basic_analyzers.yaml  analyzer_group.yaml  analyzer_loader.cpp  analyzers.yaml  batteries.yaml  cpp_agg.launch  create_analyzers.launch.py.in  default.yaml  diag_pub.cpp  diag_pub.py  discard_stale_not_published_analyzers.yaml  discard_stale_not_published_pub.py  discard_stale_not_published_test.py  dumb-sm-test.launch.py.in  empty_root_path.yaml  expected_stale_analyzers.yaml  expected_stale_pub.cpp  expected_stale_pub.py  expected_stale_test.py  multi_match_pub.cpp  multiple_match_analyzers.yaml  multiple_match_pub.py  multiple_match_test.py  pr2_agg.launch  pr2_analyzers.xml  primitive_analyzers.yaml  py_agg.launch  simple_analyzers.yaml  simple_analyzers_test.yaml  test.launch.py.in  (+10 more)
diagnostic_analysis/: 1  CHANGELOG.rst  CMakeLists.txt  Unit_Test_1.csv  manifest.xml  package.xml  ros2_migration_readme.md  setup.py
diagnostic_analysis/diagnostic_analysis/: export_csv.py  package.xml  setup.cfg  sparse_csv.py
diagnostic_analysis/scripts/: export_csv.py  sparse_csv.py
diagnostic_analysis/test/: bag_csv_test.py
diagnostic_common_diagnostics/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  ros2_migration_readme.md  rosdep.yaml  setup.cfg  setup.py
diagnostic_common_diagnostics/diagnostic_common_diagnostics/: cpu_monitor.py  hd_monitor.py  ntp_monitor.py  sensors_monitor.py  tf_monitor.py
diagnostic_common_diagnostics/src/: libsensors_chip.cpp  libsensors_monitor.cpp  ntp_monitor.py  sensors_monitor.py  tf_monitor.py
diagnostic_common_diagnostics/test/: cpu_monitor_psutil_mock.py  ram_monitor_psutil_mock.py  test_cpu_monitor.py  test_gpu_monitor.py  test_ntp_monitor.py  test_ram_monitor.py
diagnostic_generic_diagnostics/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
diagnostic_generic_diagnostics/launch/: bool_monitor_nodelet_sample.launch  bool_monitor_nodelet_test.launch  bool_monitor_sample.launch  bool_monitor_test.launch  topic_monitor_nodelet_sample.launch  topic_monitor_nodelet_test.launch  topic_monitor_sample.launch  topic_monitor_test.launch
diagnostic_generic_diagnostics/params/: bool_monitor_sample.yaml  topic_monitor_sample.yaml  topic_monitor_test.yaml
diagnostic_generic_diagnostics/test/: bool_monitor_nodetest.cpp  topic_monitor_nodetest.cpp
diagnostic_updater/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  ros2_migration_readme.md  setup.py
diagnostic_updater/diagnostic_updater/: __init__.py  _diagnostic_status_wrapper.py  _diagnostic_updater.py  _publisher.py  _update_functions.py  example.py
diagnostic_updater/src/: diagnostic_updater.cpp  example.cpp  example.py  timestamp_status.cpp
diagnostic_updater/test/: diagnostic_status_wrapper_test.cpp  diagnostic_updater_fast_test.xml  diagnostic_updater_test.cpp  diagnostic_updater_test.py  diagnostic_updater_test.xml  dummy_process.py  status_msg_test.cpp  status_msg_test.py  test_DiagnosticStatusWrapper.py  test_diagnostic_status_wrapper.py
diagnostics/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot_monitor/: CMakeLists.txt  mainpage.dox  manifest.xml
robot_monitor/scripts/: robot_monitor  robot_monitor.py
robot_monitor/test/: diag_agg_pub.py  diag_agg_pub_changing.py  diag_pub.py  robot_mon_test.launch  test_robot_mon.py
robot_monitor/xrc/: gui.fbp  gui.xrc
ros2diagnostics/: README.md  package.xml  setup.cfg  setup.py
ros2diagnostics_cli/: README.md  package.xml  setup.cfg  setup.py
ros2diagnostics_cli/scripts/: README.md  arg_parse_demo1.py  arg_parse_demo2.py  arg_parse_demo3.py  arg_parse_demo4.py  arg_parse_demo4a.py  arg_parse_demo5.py  arg_parse_demo6.py  arg_parse_demo6str.py  arg_parse_demo7.py  reg_demo.py  simple_diag_reader.py  simple_diagnostics.py
ros2diagnostics_cli/test/: test_copyright.py  test_csv.py  test_diagnostic_parse.py
rosdiagnostic/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rosdiagnostic/scripts/: rosdiagnostic
self_test/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  ros2_migration_readme.md
self_test/example/: README.md  selftest_example.cpp  selftest_example_2.cpp
self_test/scripts/: test_selftest.py
test_diagnostic_aggregator/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  test_diagnostic_aggregator_plugin.xml
(+1019 files in other folders)
