<package>
  <name>diagnostic_aggregator</name>
  <version>1.10.2</version>
  <description>diagnostic_aggregator</description>
  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <maintainer email="guglielmo.gemignani@gmail.com">Guglielmo Gemignani</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/diagnostic_aggregator</url>
<!-- <url type="bugtracker"></url> -->

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend version_gte="1.11.9">diagnostic_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>xmlrpcpp</build_depend>
  <build_depend>bondcpp</build_depend>
  <build_depend>bondpy</build_depend>

  <run_depend version_gte="1.11.9">diagnostic_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>xmlrpcpp</run_depend>
  <run_depend>bondcpp</run_depend>
  <run_depend>bondpy</run_depend>

  <export>
    <diagnostic_aggregator plugin="${prefix}/analyzer_plugins.xml"/>
  </export>
</package>
