<package format="2">
  <name>diagnostic_analysis</name>
  <version>1.9.0</version>
  <description>The diagnostic_analysis package can convert a log of diagnostics data
    into a series of CSV files. Robot logs are recorded with rosbag, and
    can be processed offline using the scripts in this package.</description>
  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/diagnostics_analysis</url>
<!-- <url type="bugtracker"></url> -->

  <author>Eric Berger</author>
  <author>Kevin Watts</author>

  <buildtool_depend>ament</buildtool_depend>

  <build_depend>diagnostic_msgs</build_depend>

  <exec_depend>diagnostic_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
