<package>
  <name>diagnostic_analysis</name>
  <version>1.10.4</version>
  <description>The diagnostic_analysis package can convert a log of diagnostics data
    into a series of CSV files. Robot logs are recorded with rosbag, and
    can be processed offline using the scripts in this package.</description>
  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <maintainer email="guglielmo.gemignani@gmail.com">Guglielmo Gemignani</maintainer>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/diagnostics_analysis</url>
<!-- <url type="bugtracker"></url> -->

  <author>Eric Berger</author>
  <author>Kevin Watts</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>roslib</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
