<package>
  <name>diagnostic_common_diagnostics</name>
  <version>1.10.2</version>
  <description>diagnostic_common_diagnostics</description>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <maintainer email="guglielmo.gemignani@gmail.com">Guglielmo Gemignani</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/diagnostic_common_diagnostics</url>
<!-- <url type="bugtracker"></url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>diagnostic_updater</run_depend>
  <run_depend>hddtemp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>python3-psutil</run_depend>

  <!-- <test_depend>diagnostic_updater</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->

  <export>
    <architecture_independent/>
  </export>
</package>
