<package>
  <name>diagnostic_common_diagnostics</name>
  <version>1.9.3</version>
  <description>diagnostic_common_diagnostics</description>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <maintainer email="karsten.knese@us.bosch.com">Karsten Knese</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/diagnostic_common_diagnostics</url>
<!-- <url type="bugtracker"></url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>hddtemp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python-psutil</exec_depend>
  <exec_depend>ntpdate</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- Usage of ament_lint_common is locked by https://github.com/ament/ament_lint/issues/423
  For now, enable the linters that do support exlusions.
  Once all files are migrated to ROS2, all linters can be 
  enabled vi ament_lint_common as the files are cleaned up. -->
  <!-- <test_depend>ament_cmake_flake8</test_depend> -->
  <!-- <test_depend>ament_cmake_pep257</test_depend> -->
  <test_depend>ament_cmake_xmllint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
