<package>
  <name>diagnostic_updater</name>
  <version>1.9.3</version>
  <description>diagnostic_updater contains tools for easily updating diagnostics. it is commonly used in device drivers to keep track of the status of output topics, device status, etc.</description>
  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/diagnostic_updater</url>
<!-- <url type="bugtracker"></url> -->

  <author>Jeremy Leibs</author>
  <author>Blaise Gassend</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

  <export>
    <architecture_independent/>
  </export>
</package>
